--- a/Ex-01.md
+++ b/Ex-01.md
@@ -18,42 +18,42 @@
 * Celebrity Recognition（有名人認識）  
   >Rekognition detects and recognizes thousands of individuals who are famous, noteworthy, or prominent in their field. This allows you to index and search digital image libraries for celebrities based on your particular interest. The API provides the name and unique id of the celebrity, confidence of the match, and URLs pointing to related content for the celebrity, for example, the celebrity's IMDB link.  
 
-  **　→　ユニークで面白そう！これをできれば利用してみたい**
+  　→　ユニークで面白そう！これをできれば利用してみたい
 
 ## Ideas  
 #### (1) 入力画像の推定結果から、室内か屋外を判定  
 with *Object and Scene Detection*  
-###### Motivation  
+##### Motivation  
 認識結果を使って面白いサービスを展開したい  
-###### Details  
+##### Details  
 画像をアップロードし、認識した結果に屋内らしいものが多くあるか、屋外らしいものが多くあるかを判別するプログラムを噛ませ、最終的に屋内屋外判定を出力  
-###### Faults  
+##### Faults  
 そもそもRekognitionのクラスに"屋内", "屋外"クラスがあった...  
 
 #### (2) 入力写真から、どの有名人と似ているかを判定  
 with *Face Comparison*, *Celebrity Recognition*  
-###### Motivation  
+##### Motivation  
 *Celebrity Recognition*をなんとか組み込みたい　　
-###### Details  
+##### Details  
 個人の顔写真を入力 → 有名人認識にかけ、一番高いスコアを提示する  
-###### Faults  
+##### Faults  
 聞き覚えのあるサービスだし、認識結果をそのまま出力するのは単純すぎる...  
 
 #### (3) アップロードされた大量のスナップ写真から、良い顔している写真のみをピックして表示  
 with *Facial Analysis*, *Facial Recognition*  
-###### Motivation  
+##### Motivation  
 顔認識に強そうだからこれを利用してみたい　　　　
-###### Details  
+##### Details  
 スナップ写真を大量に入力 → 顔を検出し、それぞれでどのくらい笑顔であるかを算出 → 笑顔のスコアが閾値よりも高い写真群を良い写真として出力    
-###### Faults  
+##### Faults  
 これも聞いたことあるし、検証用にたくさんのスナップ写真集めるの大変...  
 #### (4) アップロードされた有名人の顔写真から、関係するニュースを表示  
 with *Facial Analysis*, *Facial Recognition*  
-###### Motivation  
+##### Motivation  
 有名人認識をなんとか利用してみたい、グループに中国出身の子が二人いるからそこらへん絡められたら面白いかも？  　　　　
-###### Details  
+##### Details  
 有名人の画像を入力 → 有名人認識で有名人の名前を取得 → 検索APIでニュースサイトで取得した有名人の名前を検索 → 検索結果を出力   
-###### Faults  
+##### Faults  
 Googleの画像検索が強い？けどMotivationとうまく絡められれば...
 
 ## Future Works  
