notes of implementing recognition part

--- a/Ex-02.md
+++ b/Ex-02.md
@@ -8,3 +8,100 @@ Rekognition returns JSON that includes the name of the person in the picture.
 Finnaly, we search news of the person with google, Yahoo, or other search engines, and we get a list of news titles and URLs.
 
 
+@zyh-work
+## Notes of development process
+
+### Preparation Phase
+1. At first, we want it:
+    ![original idea](pic/IMG2.jpeg)
+
+2. But the document is not so readable for newbee, and there are too much complicated setting (not suitable for greenhand sometimes) and a lot of "Historical problem" which make the notes shared by other guys could not work well any long. Finally, we failed.
+
+3. Then I turned to find out: Are there any Microframework to help us solve it? Luckily, we got it: [Chalice: Python Serverless Microframework for AWS](https://github.com/awslabs/chalice)
+
+4. God bless us, it saved a bit of time to read the tedious offical document about how to setting the nobody-care things, just for a simple function, furthermore, I tried to implement our project based on [Freko: Serverless Face Detection API](https://github.com/gotokatsuya/freko)
+
+### Reproduce and Verify the feasibility
+1. Freko was built a year ago... So there maybe a lot of thing happened in AWS life-cycle. We need to Reproduce it onemore.
+
+2. Just as worried, it could not works well. Unknown error came out, so that DEBUG is needed.
+
+3. by a lot of trying, I pointed out the problem: the function of *base64.decodestring(data)* is too old, and after my rewrite it by *base64.b64decode(data)*, it worked.
+
+4. And then, another BUG came out, we could not position the S3 we created.
+
+5. Finally, I got that "Region resetting" is essential but I forgot it. Fixed this problem by updating initial config file simply.
+
+6. Consequently, it worked as well as one year ago.
+
+### Implement our own function
+1. add function recognize_celebrity():
+```
+def rec_c(name):
+    try:
+
+        response = REKOGNITION.recognize_celebrities(
+            Image={
+                'S3Object': {
+                    'Bucket': BUCKET,
+                    'Name': name,
+                }
+            }
+        )
+        return response
+    except Exception as ex:
+        raise ChaliceViewError("fail to detect faces. error = " + str(type(ex))) 
+```
+Nothing happened but a Error message with nothing useful:
+
+    {"Code": "InternalServerError", "Message": "An internal server error occurred."}
+
+2. Long time Debuging....
+
+3. learned from Chalice Document, turn on DEBUG-mode, and got the complete Error tracking, Finally, positioned the error: 
+**the version of boto3(SDK) deployed in lambda is too old to support this API** 
+
+4. So that I put the newest bot3 1.4.4 in the depolying package, updated the requirement.txt file. Consequently, it worked.
+
+5. Successed in call API and got the response.
+
+
+### Combine with Search module
+implemented by @ogura
+
+1. add function search_response(res):
+```
+    def search_response(res):
+    # read name of the person in the picture from JSON
+    ans = {}
+    json_dict = res
+    name = json_dict["CelebrityFaces"][0]["Name"]
+    ans['Name'] = name
+    # search with google custom search API
+    api_key = 'AIzaSyB8aEOTYwqX2UT6GE_2a1LDjVc4b_nymI0'
+    search_engine_ID = '013044299581177508447:irovpa3a1yo'
+    tbm = 'nws'
+    url = 'https://www.googleapis.com/customsearch/v1'
+
+    params = {
+            'key': api_key,
+            'cx': search_engine_ID,
+            'tbm': tbm,
+            'q': name.encode('utf-8')
+            }
+    data = urllib.parse.urlencode(params)
+    full_url = url + '?' + data
+    response = urllib.request.urlopen(full_url)
+    result = json.load(response)
+    ans['news'] = []
+    for item in result['items']:
+        ans['news'].append((item['title'], item['link']))
+    return ans 
+```
+which get response from recognition module as input, return the new list from Google Search API.
+
+2. Finally we implemented it:
+    ![original idea](pic/IMG3.jpeg)
+
+3. The full code is in [Github repo](https://github.com/univoid/a3x)
+.
