add note of Web Interface module

--- a/Ex-02.md
+++ b/Ex-02.md
@@ -103,5 +103,13 @@ which get response from recognition module as input, return the new list from Go
 2. Finally we implemented it:
     ![original idea](pic/IMG3.jpeg)
 
-3. The full code is in [Github repo](https://github.com/univoid/a3x)
-.
+3. The full code is in [Github repo: a3x](https://github.com/univoid/a3x)
+
+### Development of Web Interface and deloyment to EC2
+A simple web APP built with NodeJS, express, and Formidable. Uploading image throuth AJAX And call API, which is built in the previous part.
+
+It is not the main module of project so detail of development is omitted.
+
+Please check:
+
+The full code of Interface module[Github repo: file-uploader](https://github.com/univoid/file-uploader)
